--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ autopep8==1.5.4
 Django==3.1.3
 django-filter==2.4.0
 djangorestframework==3.12.2
+gunicorn==20.0.4
 Markdown==3.3.3
 Pillow==8.0.1
 pycodestyle==2.6.0
